syntax = "proto3";

package token;

option go_package = ".";

message GenerateTokenRequest { string id = 1; }

message GenerateTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message VerifyTokenRequest { string token = 1; }

message VerifyTokenResponse { string id = 1; }

message RevokeTokenRequest { string token = 1; }

message RevokeTokenResponse { string token = 1; }

// JWT
message GenerateJWTRequest {
  string user_id = 2;
  repeated string roles = 3;
}

message GenerateJWTResponse { string token = 1; }
service TokenService {
  rpc GenerateToken(GenerateTokenRequest) returns (GenerateTokenResponse);
  // rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
  // rpc RevokeToken(RevokeTokenRequest) returns (RevokeTokenResponse);
}